<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/data_mahasiswa"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/nim_mahasiswa"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/masukan_nim"
        android:inputType="textPersonName"
        android:importantForAutofill="no" tools:targetApi="o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/nama_mahasiswa"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/masukan_nama"
        android:inputType="textPersonName"
        android:importantForAutofill="no" tools:targetApi="o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/fakultas_jurusan"
        android:layout_marginEnd="4dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jurusan"
        android:entries="@array/daftar_jurusan"
        android:padding="15dp">

    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/famale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/perempuan"
            android:layout_marginStart="18dp" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/tgl_lahir_mahasiswa"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tanggal_lahir"
        android:inputType="date"
        android:importantForAutofill="no" tools:targetApi="o" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginTop="6dp"
        android:text="@string/alamat_mahasiswa"
        android:layout_marginEnd="4dp" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alamat_lengkap"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" tools:targetApi="o" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan_data_baru" />

    <Button
        android:id="@+id/readData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lihat_data_yang_tersimpan" />
</LinearLayout>